--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ header {
   float: right;
   list-style: none;
   margin-top: 55px;
+  margin-bottom: 20px;
 }
 
 .main-nav li {
@@ -62,6 +63,14 @@ header {
   padding: 50px 0;
   border-bottom: 1px ridge;
   min-height: 200px;
+}
+
+.mission {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8)));
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
+  background-size: cover;
+  color: white;
+  background-attachment: fixed;
 }
 
 /* Footer */
