--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 /* Custom CSS */
 
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -25,7 +25,7 @@ h3,
 
 a:link,
 a:visited {
-  color: #00a59e;
+  color: white;
   text-decoration: none;
   padding-bottom: 1px;
 }
@@ -35,10 +35,9 @@ a:visited {
 header {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.34)), to(rgba(0, 0, 0, 0.34))), url(IMG/hero-min.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.34), rgba(0, 0, 0, 0.34)), url("./shared/pretendBannerImg.jpg");
-  height: 50vh;
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .logo {
@@ -48,7 +47,7 @@ header {
 .main-nav {
   float: right;
   list-style: none;
-  margin-top: 55px;
+  margin-top: 70px;
   margin-bottom: 20px;
 }
 
@@ -76,6 +75,6 @@ header {
 /* Footer */
 
 .site-footer {
-  background-image: linear-gradient(#cec8ff, white);
+  background-image: linear-gradient(#00a59e, #fff);
   padding: 20px 0;
 }
