--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 } */
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Montserrat", cursive;
 }
 
 h1,
@@ -32,7 +32,7 @@ a:visited {
 
 /* Header */
 
-header {
+.banner {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.34)), to(rgba(0, 0, 0, 0.34))), url(IMG/hero-min.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.34), rgba(0, 0, 0, 0.34)), url("./shared/pretendBannerImg.jpg");
   background-size: cover;
@@ -45,15 +45,8 @@ header {
 }
 
 .main-nav {
-  float: right;
-  list-style: none;
   margin-top: 70px;
   margin-bottom: 20px;
-}
-
-.main-nav li {
-  display: inline-block;
-  margin: 0 0 0 40px;
 }
 
 /* Mission---Store */
@@ -75,6 +68,6 @@ header {
 /* Footer */
 
 .site-footer {
-  background-image: linear-gradient(#00a59e, #fff);
+  background-image: linear-gradient(#00a59e, black);
   padding: 20px 0;
 }
