--- a/src/App.css
+++ b/src/App.css
@@ -51,10 +51,37 @@ a:visited {
 
 /* Mission---Store */
 
+blockquote {
+  font-family: Georgia, serif;
+  position: relative;
+  margin: 0.5em;
+  padding: 0.5em 2em 0.5em 3em;
+}
+/* Thanks: http://callmenick.com/post/styling-blockquotes-with-css-pseudo-classes */
+blockquote:before {
+  font-family: Georgia, serif;
+  position: absolute;
+  font-size: 6em;
+  line-height: 1;
+  top: 0;
+  left: 0;
+  content: "\201C";
+}
+blockquote:after {
+  font-family: Georgia, serif;
+  position: absolute;
+  /* display: block; don't use this, it raised the quote too high from the bottom - defeated line-height? */
+  float: right;
+  font-size: 6em;
+  line-height: 1;
+  right: 0;
+  bottom: -0.5em;
+  content: "\201D";
+}
+
 .row-content {
-  padding: 50px 0;
-  border-bottom: 1px ridge;
-  min-height: 200px;
+  text-align: center;
+  width: 100%;
 }
 
 .mission {
@@ -65,6 +92,9 @@ a:visited {
   background-attachment: fixed;
 }
 
+.missionCard {
+  max-height: 200px;
+}
 /* Footer */
 
 .site-footer {
