--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@ blockquote:after {
   width: 100%;
 }
 
-.mission {
+.homeSection {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8)));
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
   background-size: cover;
